# Text-Summarizer-using-Hugging-face-and-Transformers

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  template.py
config/: config.yaml
docs/: Evaluation metrics of Language models.md  Math behind memory calculation.md  Need for accelarated gpu.md
research/: 01_data_ingestion.ipynb  02_data_transformation.ipynb  03_model_trainer.ipynb  research.ipynb  textSummarizer.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/entity/: __init__.py
src/textSummarizer/logging/: __init__.py
src/textSummarizer/pipeline/: stage_01_data_ingestion_pipeline.py  stage_02_data_transformation_pipeline.py
src/textSummarizer/utils/: common.py
